--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,5 @@
-name: Python Test
+name: docker-push
 on:
-  push:
-    branches:
-    - master
-    tags:
-      - v1.*
   pull_request:
     branches-ignore:
     - release
